Add useQuery in login page
